# skills

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  LICENSE  package-lock.json  package.json  pnpm-lock.yaml  rslib.config.ts  rstest.config.ts  tsconfig.json
.agents/docs/: conditional-reflection.md
.githooks/: pre-commit
.trae/: hooks.json
.trae/rules/: agent-sync.md  project-skills-methodology.md  project.md  skills-english-only.md  trae-skill.md
agents/: AGENTS.md
agents/architecture-advisor/: agent.md
agents/domain-modeler/: agent.md
agents/legacy-surgeon/: agent.md
agents/problem-definer/: agent.md
agents/refactoring-guide/: agent.md
agents/responsibility-modeler/: agent.md
agents/spec-by-example/: agent.md
agents/story-mapper/: agent.md
agents/tdd-coach/: agent.md
agents/test-strategist/: agent.md
apps/intelligent-rule-manager/: .vscodeignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
apps/intelligent-rule-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/intelligent-rule-manager/src-tauri/src/: lib.rs
apps/intelligent-rule-manager/src-tauri/src/commands/: mod.rs
life-reset-workspace/: eval_review.html  trigger-evals.json
project-agent-writer-workspace/: final-archive.md
project-skill-installer-workspace/: final-archive.md
project-skill-writer-workspace/: final-archive.md
scripts/: lint-skill-docs.mjs  manage-hooks.mjs  release.mjs  sync-shared-docs.mjs
scripts/hooks/: install.cjs  lib.cjs
tests/: lint-skill-docs.test.ts  smoke.test.ts
trae-rules-writer-workspace/: final-archive.md
(+921 files in other folders)
