[package]
name = "intelligent-rule-manager-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "intelligent_rule_manager_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
rule-core = { path = "../crates/rule-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }

